@@ -7,34 +7,34 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	5.4 (gritter) 11/8/05";
+	"@(#)/usr/ucb/otfdump.sl	5.5 (gritter) 11/16/05";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  5.4 (gritter) 11/8/05";
-const char creator[] = "Heirloom Documentation Tools - dpost 5.4 (gritter) 11/8/05";
+static const char sccsid[] USED = "@(#)dpost.sl  5.5 (gritter) 11/16/05";
+const char creator[] = "Heirloom Documentation Tools - dpost 5.5 (gritter) 11/16/05";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.4 (gritter) 11/8/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.5 (gritter) 11/16/05";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.4 (gritter) 11/8/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.5 (gritter) 11/16/05";
 #endif	/* !DUMP, !NROFF */
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
-ext.h: * Sccsid @(#)ext.h	1.27 (gritter) 9/30/05
+ext.h: * Sccsid @(#)ext.h	1.28 (gritter) 11/16/05
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 mallint.h: * Sccsid @(#)mallint.h	1.4 (gritter) 8/27/05
 malloc.c: * Sccsid @(#)malloc.c	1.3 (gritter) 8/26/05
-n1.c: * Sccsid @(#)n1.c	1.45 (gritter) 10/22/05
+n1.c: * Sccsid @(#)n1.c	1.46 (gritter) 11/16/05
 n2.c: * Sccsid @(#)n2.c	1.11 (gritter) 9/30/05
-n3.c: * Sccsid @(#)n3.c	1.52 (gritter) 10/25/05
+n3.c: * Sccsid @(#)n3.c	1.53 (gritter) 11/16/05
 n4.c: * Sccsid @(#)n4.c	1.12 (gritter) 9/5/05
 n5.c: * Sccsid @(#)n5.c	1.22 (gritter) 11/8/05
 n7.c: * Sccsid @(#)n7.c	1.38 (gritter) 11/8/05
 n8.c: * Sccsid @(#)n8.c	1.17 (gritter) 10/14/05
 n9.c: * Sccsid @(#)n9.c	1.22 (gritter) 9/30/05
 ni.c: * Sccsid @(#)ni.c	1.15 (gritter) 9/6/05
-nii.c: * Sccsid @(#)nii.c	1.17 (gritter) 11/8/05
+nii.c: * Sccsid @(#)nii.c	1.18 (gritter) 11/16/05
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.53 (gritter) 11/8/05
+tdef.h: * Sccsid @(#)tdef.h	1.54 (gritter) 11/16/05
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.19 (gritter) 9/11/05
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.21 (gritter) 9/18/05
 nroff.d/proto.h: * Sccsid @(#)proto.h	1.23 (gritter) 9/30/05
