@@ -5,6 +5,8 @@ Release ...
   the new behavior.
 * [nt]roff: The static limit on the number of if-else constructs has
   been removed.
+* [nt]roff: The static limit on the number of nested diversions has been
+  removed.
 * -man macros: Fixed the output of a very long line following ".TP".
 * RPM package builds now require the new "Heirloom Development Tools"
   package from <http://heirloom.sourceforge.net/devtools.html> to be
